# multimodal

./: .gitignore  .prettierignore  .pylintrc  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.main.config.mts  vite.main.config.ts  vite.renderer.config.mts
hand_detector/: hand_detector.py
hand_detector/dataset_generation/: frame_timestamp_inference.py  merger.py  predict_timestamps.py  test_timestamp_inference.py
hand_detector/dataset_generation/loss_array/: key_pressed.py
src/: globals.d.ts  keyLogger.ts  logger.ts  main.ts  preload.ts  renderer.ts  sessionUuid.ts
src/renderer/: App.tsx  StreamingQRCode.tsx  global.css  index.tsx  sessionUuid.ts
typeformar/: hand_detector.py
typeformar/dataset_generation/: batch_video_preparation.py  create_labeled_joint_data.py  frame_timestamp_inference.py  merger.py  test_timestamp_inference.py
typeformar/dataset_generation/loss_array/: distance_funcs.py  key_pressed.py  test_key_pressed.py
typeformar/dataset_generation/segment_words/: find_words.py  int_to_key.py  segment_words_by_space.py  test_segment_words.py
typeformar/lstm_practice/: lstm_prediction.ipynb
typeformar/spacebar_detection/: dataset_joint_visualizer.py  dataset_preparation.py  playground.py  space_detector_lstm.py  toy_test.py
typeformar/t5_finetuning/: dataset.py  eval.py  models.py  playground.ipynb  train.py
