[tool.poetry]
name = "multimodal"
version = "0.1.0"
description = ""
authors = ["Eli Scharf <escharf@mit.edu>", "Jacob Daitzman <jdtzmn@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.11.0.86"
mediapipe = "^0.10.21"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
