[tool.poetry]
name = "TypeFormAR"
version = "0.1.0"
description = ""
authors = ["Eli Scharf <escharf@mit.edu>", "Jacob Daitzman <jdtzmn@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.11.0.86"
mediapipe = "^0.10.21"
pyzbar = "^0.1.9"
numpy = "<2"
tqdm = "^4.67.1"
torch = "^2.6.0"
pandas = "^2.2.3"
transformers = "^4.51.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
poethepoet = "^0.33.1"
scikit-learn = "^1.6.1"
pylint = "^3.3.6"
ipykernel = "^6.29.5"
num2words = "^0.5.14"

[tool.poe.tasks]
video-prep = "python typeformar/dataset_generation/batch_video_preparation.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
