[tool.poetry]
name = "TypeFormAR"
version = "0.1.0"
description = ""
authors = ["Eli Scharf <escharf@mit.edu>", "Jacob Daitzman <jdtzmn@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.11.0.86"
mediapipe = "^0.10.21"
pyzbar = "^0.1.9"
numpy = "<2"
tqdm = "^4.67.1"
torch = "^2.6.0"
pandas = "^2.2.3"
transformers = "^4.51.3"
matplotlib = "^3.10.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
poethepoet = "^0.33.1"
scikit-learn = "^1.6.1"
pylint = "^3.3.6"
ipykernel = "^6.29.5"
num2words = "^0.5.14"

[tool.poe.tasks]
segment_words = "python typeformar/dataset_generation/segment_words/test_segment_words.py"
timestamp_inference = "python typeformar/dataset_generation/test_timestamp_inference.py"
eval_transformer = "python typeformar/t5_finetuning/eval.py"
train_transformer = "python typeformar/t5_finetuning/train.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
